--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,18 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --animate-aurora: aurora 20s linear infinite;
+  @keyframes aurora {
+    from {
+      background-position: 50% 50%, 50% 50%;
+    }
+    to {
+      background-position: 350% 50%, 350% 50%;
+    }
+  }
+}
+
+@theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -79,7 +91,7 @@
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
+  --background: oklch(13.52% 0.021 261.35);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
   --card-foreground: oklch(0.985 0 0);
@@ -114,7 +126,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 overscroll-none;
   }
   body {
     @apply bg-background text-foreground;
@@ -122,7 +134,7 @@
 }
 
 .cross-chain {
-  offset-anchor: 100px 0px;
+  offset-anchor: 200px 0px;
   animation: cross-chain-animation-path;
   animation-iteration-count: infinite;
   animation-timing-function: cubic-bezier(0, -1.59, 1, 3.67);
@@ -136,4 +148,12 @@
   100% {
     offset-distance: 100%;
   }
+}
+
+.get-skewed {
+  transform: skewY(-10deg) skewX(30deg) translateX(-40px) translateY(-20px);
+}
+
+.iceberg {
+  font-family: var(--font-iceberg);
 }
